Objective-C GData Framework Release Notes

Project site:     http://code.google.com/p/gdata-objectivec-client/
Discussion group: http://groups.google.com/group/gdata-objectivec-client-framework

Changes since 1.10.0

Additions

- Added keyed roles to ACLs

Changes

- Deployment target for framework build is now 10.5

- Removed unused class GDataContactWebsite

- Docs API no longer makes https optional

- YouTube ratings are now yt:rating elements for like/dislike counts, not
  gd:rating elements

- YouTube sample app has relaxed metadata requirements for uploading

- YouTube API no longer uses client IDs

- Contacts API setters now replace empty strings with nil, and birthday
  now has an NSDate getter/setter

Bugs Fixed

- Fixed signing of OAuth paths with non-alphanumeric characters

- Fixed OAuth sign-in when using an authentication object with a prior
  token secret (thanks ddickison)

- Stop printing _cmd in a macro as a C-string to quiet a clang warning (thanks
  j abley)


Release 1.10.0
31-March-2010
Changes since 1.9.1

Additions

- Added support for Google Translator Toolkit API.

- Added support for Google Analytics v2.1 API.

- Added support for chunked uploads, uploads from a file handle, and upload
  pause/resume to Docs and YouTube APIs, and updated Docs and YouTube sample
  apps to demonstrate pause/resume.

- Added fieldSelection support for partial responses and updates.

- Added Objective-C block completion handler support to GData service class
  fetch APIs.

- Added addCategoryFilterWithCategory: to GDataQuery.

- Added "onlydeleted" parameter for queries.

- Added a faster category search routine, categories:containsCategoryWithScheme:

- Deletion fetch callbacks can now get the deleted entry as the ticket's
  postedObject.  The postedObject is also now available following authentication
  errors.

- GDataServiceGoogle now has methods to fetch an entry or feed specifying an
  ETag.
